--- a/initial-code/html-css/.eslintrc.json
+++ b/initial-code/html-css/.eslintrc.json
@@ -10,8 +10,7 @@
   "extends": [
     "plugin:prettier/recommended",
     "plugin:react/recommended",
-    "plugin:import/recommended",
-    "plugin:jsx-a11y/recommended"
+    "plugin:import/recommended"
   ],
   "env": {
     "browser": true,
